--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,4 @@ jobs:
         # PyPI password or API token
         password: ${{secrets.PYPI_TOKEN}}
         build: true
+        skip_existing: true
