--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,4 @@ jobs:
         password: ${{secrets.PYPI_TOKEN}}
         build: true
         skip_existing: true
+        url: "https://pypi.org/"
