--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,17 @@
 site_name: waterch-tasker
-theme: readthedocs
-pages:
+theme: material
+nav:
   - Home: index.md
-  - API: api.autodoc
+  - API:
+      waterch.tasker:
+        tasks: api/tasks.md
+plugins:
+  - search
+  - mkdocstrings:
+      default_handler: python
+      handlers:
+        python:
+          rendering:
+            show_source: true
+      watch:
+        - src/waterch/tasker
