--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -3,7 +3,7 @@ python:
   version: 3.8
   install:
     - requirements: requirements.txt
-    - method: setuptools
+    - method: pip
       path: .
 mkdocs:
   configuration: mkdocs.yml
