--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -3,6 +3,7 @@ python:
   version: 3.8
   install:
     - requirements: requirements.txt
+    - requirements: docs/requirements.txt
     - method: pip
       path: .
 mkdocs:
