--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,4 @@ python-box>=4.2.3
 toml>=0.10.1
 more-itertools>=8.3.0
 pytorch-ignite>=0.3.0
-# Please manually install the following modules.
-# torch>=1.5.1
+torch>=1.5.1
