--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,8 @@
 markdown>=3.2.2
 mkdocstrings>=0.11.1
 mkdocs-material>=5.2.0
+python-box>=4.2.3
+toml>=0.10.1
+more-itertools>=8.3.0
+torch>=1.7.1
+pytorch-ignite>=0.4.3
